[package]
name = "toybox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3"
defmt-rtt = "0.4"
heapless = "0.8"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
rev = "85d5f42562ca9374e3200d652616af9533346c5e"
features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
    "nightly",
]

[dependencies.embassy-stm32]
git = "https://github.com/embassy-rs/embassy.git"
rev = "85d5f42562ca9374e3200d652616af9533346c5e"
features = ["defmt", "stm32f072rb", "time", "time-driver-any", "exti"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
rev = "85d5f42562ca9374e3200d652616af9533346c5e"
features = ["defmt", "defmt-timestamp-uptime"]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy.git"
rev = "85d5f42562ca9374e3200d652616af9533346c5e"
features = ["defmt"]

[dependencies.embassy-futures]
git = "https://github.com/embassy-rs/embassy.git"
rev = "85d5f42562ca9374e3200d652616af9533346c5e"

[profile.sol]
inherits = "release"
incremental = true
debug = true

[profile.prod]
inherits = "release"
debug = false
codegen-units = 1
lto = true
